@startuml
!include vista.iuml
title Modelo Exclusividad

class Ronda{
    - jugadorIterator: Iterator<Jugador>
    - jugadorTurno: Jugador
    - puntajesRonda Map<Jugador, Integer>
    - aplicanExclusividad: List<Jugador>
    - estadoRonda: EstadoRonda
    - exclusividad: Exclusividad
    + restablecerRonda(pregunta: Preguntable)
    + obtenerJugadores(): List<Jugador>
    + obtenerPregunta(): Preguntable
    + obtenerJugadorTurno(): Jugador
    + responder(opciones: List<Opcion>, multiplicador: MultiplicableStrategy, aplicaExclusividad: Boolean):void
    + esRondaFinalizada(): Boolean
    - validarRonda(jugadores: List<Jugador>, pregunta: Preguntable)
    - actualizarTurno()
    - actualizarEstadoRonda()
    - cambiarJugadorTurno()
    - aplicarPuntajes()
}

class Exclusividad{
    - modificador: int
    - estado: EstadoExclusividad
    - exclusividadDesactivada: EstadoExclusividad
    - exclusividadActivada: EstadoExclusividad
    + activarExclusividad()
    + desactivarExclusividad()
    + aplicarExclusividad(jugadores: List<Jugador>, puntajesRonda: Map<Jugador, Integer>, aplicanExclusividad: List<Jugador>)
    - elegirTipoExclusividad(aplicanExclusividad: List<Jugador>)
}

interface EstadoExclusividad{
    + utilizarExclusividad(jugadores: List<Jugador>, puntajesRonda: Map<Jugador, Integer>, modificador: int): Map<Jugador, Integer>
}

class ExclusividadActivada{
    - aplicarModificador(jugadores: List<Jugador>, puntajesRonda: Map<Jugador, Integer>, modificador: int): Map<Jugador, Integer>
    - todosJugadoresRespondieronBien(jugadores: List<Jugador>, puntajesRonda: Map<Jugador, Integer> puntajesRonda): Boolean
    - jugadoresRespondieronIgual(jugadores: List<Jugador>, puntajesRonda: Map<Jugador, Integer> puntajesRonda): Boolean
}

class ExclusividadDesactivada{

}

Ronda o-right-> Exclusividad
Exclusividad o--> EstadoExclusividad
EstadoExclusividad <|.. ExclusividadActivada
EstadoExclusividad <|.. ExclusividadDesactivada
@enduml